Added temporary modal container

--- a/view/frontend/templates/widget/view.phtml
+++ b/view/frontend/templates/widget/view.phtml
@@ -8,7 +8,7 @@
 <pre>
     <?php
         print_r($data);
-        print_r(array_keys($data));
+        // print_r(array_keys($data));
     ?>
     
 </pre>
