--- a/view/frontend/templates/widget/view.phtml
+++ b/view/frontend/templates/widget/view.phtml
@@ -1,53 +1,18 @@
-<?php
- $data = $block->getData('slider_data');
- $breakpoint = $data['responsive'];
- array_multisort(array_column($breakpoint, 'position'), SORT_ASC, $breakpoint);
-?>
-
-<?php
 
 
-foreach ($data as $key) {
- unset($data['slides'], $data['is_responsive'], $data['responsive'], $data['']);
-}
-
-$items = array();
-foreach ($breakpoint as $key) {
- unset(
-  $key['record_id'],
-  $key['position'],
-  $key['initialize']
- );
- if(!$key['autoplay'])
-  unset($key['autoplaySpeed']);
- if(!$key['centerMode'])
-  unset($key['centerPadding']);
- $items[] = array(
-  'breakpoint' => $key['breakpoint'],
-  'settings' => array_slice($key, 1)
- );
-}
-
-?>
-
-<pre>
-<?= json_encode($items, JSON_PRETTY_PRINT); // print_r($items);  ?>
-</pre>
-
-<!-- <div class="slicker" data-slick='{"slidesToShow": 1, "slidesToScroll": 1}'>
-  <div><h3>1</h3></div>
-  <div><h3>2</h3></div>
-  <div><h3>3</h3></div>
-  <div><h3>4</h3></div>
-  <div><h3>5</h3></div>
-  <div><h3>6</h3></div>
+<div class="slicker" data-slick='{"arrows":true,"dots":false,"infinite":true,"fade":false,"speed":1000,"autoplay":false,"centerMode":false,"adaptiveHeight":false,"slidesToShow":1,"slidesToScroll":1,"responsive":[{"breakpoint":"768","settings":{"arrows":true,"dots":true,"autoplay":false,"infinite":false,"fade":false,"speed":500,"slidesToShow":3,"slidesToScroll":1,"centerMode":false,"adaptiveHeight":false}}],"mobileFirst":true}'>
+ <div><h3>1</h3></div>
+ <div><h3>2</h3></div>
+ <div><h3>3</h3></div>
+ <div><h3>4</h3></div>
+ <div><h3>5</h3></div>
+ <div><h3>6</h3></div>
 </div>
 
 <script>
-
-require(['jquery', 'slick'], function($) {
-    $(document).ready(function() {
-        $(".slicker").slick();
-    });
-});
-</script> -->
+ require(['jquery', 'slick'], function($) {
+  $(document).ready(function() {
+   $(".slicker").slick();
+  });
+ });
+</script>
