--- a/view/adminhtml/web/css/styles.css
+++ b/view/adminhtml/web/css/styles.css
@@ -1,8 +1,16 @@
 .us-admin__fieldset-parent { border: none !important; }
 .us-admin__fieldset-parent > .admin__fieldset-wrapper-content > .admin__fieldset { padding: 0 !important; }
-.us-admin__fieldset-child { margin-top: 0 !important; margin-bottom: 0 !important; margin-left: 0 !important; border-bottom-width: 1px !important; }
-.us-admin__fieldset-child:last-child { border-top: none !important; }
+.us-admin__fieldset-child { margin-top: 0 !important; margin-bottom: 0.5rem !important; margin-left: 0 !important; border-bottom-width: 1px !important; }
 .us-admin__fieldset-child > .fieldset-wrapper-title { background: #f5f5f5 !important; }
 .us-admin__fieldset-child > .fieldset-wrapper-title > .admin__collapsible-title { padding-left: 0 !important; }
 .us-admin__fieldset-child > .fieldset-wrapper-title > .admin__collapsible-title:before { right: 1.3rem; left: auto; }
 .us-admin__button { margin-bottom: 3rem; }
+
+.us-admin__groupfields { display: flex; }
+.us-admin__groupfields > .admin__field { margin-top: 0 !important; margin-right: 1rem; }
+.us-admin__groupfields > .admin__field.us-admin__groupfield--text-small { width: 60px; }
+
+.us-admin__fieldset-child-modal { margin-bottom: 0.5rem !important; border-width: 1px !important; background: #fff; }
+.us-admin__fieldset-child-modal > .fieldset-wrapper-title { background: #f5f5f5 !important; }
+.us-admin__fieldset-child-modal > .fieldset-wrapper-title > .admin__collapsible-title { padding-left: 1rem !important; }
+.us-admin__fieldset-child-modal-child > .fieldset-wrapper-title { padding: 0 1rem !important; }
