--- a/view/frontend/templates/widget/view.phtml
+++ b/view/frontend/templates/widget/view.phtml
@@ -1,3 +1,5 @@
+<pre><?= json_encode($this->getData('slider_data'),JSON_PRETTY_PRINT) ?></pre>
+
 <?php
  $slides = $block->getSlides();
  if(count($slides)):
