Updated css file for the admin. Temporarily disabled View.php. Enhanced Widget form fields. Extended magento ui group js file to add hide and show function

--- a/view/frontend/templates/widget/view.phtml
+++ b/view/frontend/templates/widget/view.phtml
@@ -5,7 +5,7 @@
  if(count($slides)):
 ?>
 
- <div class="usslick__slider" data-slick='<?= $block->getSettings() ?>'>
+ <div class="usslick__slider" >
 
   <?php
    foreach($slides as $slide):
