--- a/view/frontend/templates/widget/view.phtml
+++ b/view/frontend/templates/widget/view.phtml
@@ -47,5 +47,10 @@
 <pre><?= $block->getColumns('styles') ?></pre>
 <pre><?= $block->getStyles(); ?></pre>
 <br/>
-<pre><?= $block->getSettings() ?></pre>
+<pre><?= json_encode($block->getParentContainerData(),JSON_PRETTY_PRINT); ?></pre>
+
+
+<pre><?= json_encode($block->getResponsiveContainerData(),JSON_PRETTY_PRINT); ?></pre>
+
+
 
