--- a/view/frontend/templates/widget/view.phtml
+++ b/view/frontend/templates/widget/view.phtml
@@ -1,3 +1,48 @@
+<?php
+ $slides = $block->getSlides();
+ if(count($slides)):
+?>
+
+ <div id="<?= $block->getId() ?>" class="usslick__slider">
+
+  <?php
+   foreach($slides as $slide):
+    $status = $slide['status'];
+    $title = $slide['title'];
+    $alt = $slide['alt'];
+    $link = $slide['link'];
+    $image = $slide['image'];
+    $getLink = $block->getSlideLink($link);
+    $getImage = $block->getSlideImage($image);
+    $isNewTab = $block->getSlideTarget($link);
+   ?>
+   
+  <?php if($status && $image): ?>
+  <div class="usslick__slide">
+    
+   <?php if($getLink) : ?>
+   <a href="<?= $getLink ?>" title="<?= $title ?>" class="usslick__slide--link" <?= ($isNewTab) ? 'target="_blank"': '' ?>>
+   <?php else: ?>
+   <div class="usslick__slide--unlink">
+   <?php endif; ?>
+
+    <img src="<?= $getImage ?>" alt="<?= $alt ?>" title="<?= $title ?>" class="usslick__slide--image" />
+
+   <?php if($getLink) : ?>
+   </a>
+   <?php else: ?>
+   </div>
+   <?php endif; ?>
+
+  </div>
+  <?php endif; ?>
+
+  <?php endforeach; ?>
+
+ </div>
+
+<?php endif; ?>
+
 <pre><?= json_encode($this->getData('slider_data'),JSON_PRETTY_PRINT) ?></pre>
 
 <script>
@@ -44,13 +89,15 @@
 <br/>
 <pre><?= json_encode($block->getItems('styles'),JSON_PRETTY_PRINT) ?></pre>
 <br/>
-<pre><?= $block->getColumns('styles') ?></pre>
 <pre><?= $block->getStyles(); ?></pre>
 <br/>
-<pre><?= json_encode($block->getParentContainerData(),JSON_PRETTY_PRINT); ?></pre>
+<pre><?= json_encode($block->getParentData(),JSON_PRETTY_PRINT); ?></pre>
 
+<br/>
+<br/>
+<br/>
+<pre><?= json_encode($block->getResponsiveData(),JSON_PRETTY_PRINT); ?></pre>
 
-<pre><?= json_encode($block->getResponsiveContainerData(),JSON_PRETTY_PRINT); ?></pre>
 
 
 
