Improved responsive field validations. Improved parent columns css. Renamed basic functions

--- a/view/frontend/templates/widget/view.phtml
+++ b/view/frontend/templates/widget/view.phtml
@@ -84,16 +84,7 @@
       <div><h3>6</h3></div>
     </div>
 
-
-<pre><?= $block->getStyles(); ?></pre>
-
-<br/>
-<pre><?= json_encode($block->getParentData(),JSON_PRETTY_PRINT); ?></pre>
-
-<br/>
-<br/>
-<br/>
-<pre><?= json_encode($block->getResponsiveData(),JSON_PRETTY_PRINT); ?></pre>
+<pre><?= $block->getStylesheets(); ?></pre>
 
 
 
