--- a/view/frontend/templates/widget/view.phtml
+++ b/view/frontend/templates/widget/view.phtml
@@ -1,10 +1,9 @@
-<pre><?= $block->getResponsiveSlickSettings(); ?></pre>
 <?php
  $slides = $block->getSlides();
  if(count($slides)):
 ?>
 
- <div id="<?= $block->getId() ?>" class="usslick__slider" <?php if($block->isResponsive()) :?>data-slick='<?= $block->getResponsiveSlickSettings(); ?>'<?php endif; ?>>
+ <div id="<?= $block->getId() ?>" class="usslick__slider">
 
   <?php
    foreach($slides as $slide):
@@ -13,16 +12,16 @@
     $alt = $slide['alt'];
     $link = $slide['link'];
     $image = $slide['image'];
-    $getLink = $block->getSlideLink($link);
-    $getImage = $block->getSlideImage($image);
-    $isNewTab = $block->getSlideTarget($link);
+    $getLink = $block->getLink($link);
+    $getTarget = $block->getTarget($link);
+    $getImage = $block->getImage($image);
    ?>
    
   <?php if($status && $image): ?>
   <div class="usslick__slide">
     
    <?php if($getLink) : ?>
-   <a href="<?= $getLink ?>" title="<?= $title ?>" class="usslick__slide--link" <?= ($isNewTab) ? 'target="_blank"': '' ?>>
+   <a href="<?= $getLink ?>" title="<?= $title ?>" class="usslick__slide--link" <?= $getTarget ?>>
    <?php else: ?>
    <div class="usslick__slide--unlink">
    <?php endif; ?>
@@ -44,33 +43,86 @@
 
 <?php endif; ?>
 
-<pre><?= json_encode($this->getData('slider_data'),JSON_PRETTY_PRINT) ?></pre>
+<pre><?= json_encode($block->getParentData(),JSON_PRETTY_PRINT) ?></pre>
+<br/>
+<pre><?= json_encode($block->getResponsiveData(),JSON_PRETTY_PRINT) ?></pre>
+
+<br/>
+<pre><?= json_encode($block->getResponsiveSlickSettings(),JSON_PRETTY_PRINT) ?></pre>
+
+<br/>
+<pre><?= json_encode($block->getSlickSettings(),JSON_PRETTY_PRINT) ?></pre>
+
 
 <script>
  require([
   'jquery',
-  'matchMedia',
   'slick'
- ], function($, mediaCheck, slick) {
+ ], function($, slick) {
+  var $window = $(window);
+  var $slick_slider = $('#<?= $block->getId() ?>');
+  var settings = {
+    "arrows": true,
+    "dots": false,
+    "infinite": true,
+    "speed": 300,
+    "autoplay": false,
+    "centerMode": false,
+    "adaptiveHeight": true,
+    "slidesToShow": 4,
+    "slidesToScroll": 1,
+    "responsive": [    
+      {
+            "breakpoint": 768,
+            "settings": "unslick"
+        },
+        {
+            "breakpoint": 992,
+            "settings": {
+                "arrows": true,
+                "dots": false,
+                "infinite": true,
+                "speed": 300,
+                "autoplay": true,
+                "autoplaySpeed": 4000,
+                "slidesToShow": 2,
+                "slidesToScroll": 1
+            }
+        },
+        
+    
+        {
+            "breakpoint": 1200,
+            "settings": {
+                "arrows": true,
+                "dots": false,
+                "infinite": true,
+                "speed": 300,
+                "autoplay": false,
+                "centerMode": false,
+                "slidesToShow": 3,
+                "slidesToScroll": 1
+            }
+        }
+    ]
+};
 
-   var $slick_slider = $('#<?= $block->getId() ?>');
-   $slick_slider.slick(<?= $block->getSlickSettings(); ?>);
 
 
-  //  mediaCheck({
-  //   media: '(max-width: 699px)',
-  //   entry: function() {
-     
-  //    if($slick_slider.hasClass('slick-initialized'))
-  //     $slick_slider.slick('unslick');
-  //    return
-  //   },
-  //   exit: function() {
-  //    if(!$slick_slider.hasClass('slick-initialized'))
-  //     return $slick_slider.slick("resize");;
-  //    }
-  //  });
 
+$slick_slider.slick(settings);
+
+$window.on('resize', function() {
+  if ($window.width() < 640) {
+    if ($slick_slider.hasClass('slick-initialized'))
+    setTimeout(function(){ $slick_slider.slick('unslick'); },100);
+    return
+  }
+  if (!$slick_slider.hasClass('slick-initialized'))
+    return setTimeout(function(){$slick_slider.slick(settings)},100);
+});  
+
+ 
 
 
  });
