Reverted slick script to the header. Improved dynamic css through php function. Improved unslick feature by adding breakpoint hack. Added slide items css functions

--- a/view/frontend/templates/header/head.phtml
+++ b/view/frontend/templates/header/head.phtml
@@ -2,10 +2,10 @@
  .usslick__slider .slick-slide { height: auto; }
 </style>
 
-<!-- <script>
+<script>
  require(['jquery', 'slick'], function($) {
   $(document).ready(function() {
    $(".usslick__slider").slick();
   });
  });
-</script> -->
+</script>
