Removed base folder. Added new template specifically to image uploader/gallery. Added new margin and padding fields for each slider item. Modification on the css file for admin and front-end.

--- a/view/frontend/templates/widget/view.phtml
+++ b/view/frontend/templates/widget/view.phtml
@@ -1,3 +1,4 @@
+<pre><?= json_encode($block->getSlides(),JSON_PRETTY_PRINT); ?></pre>
 <?php
  $slides = $block->getSlidesData();
  if(count($slides)):
