Added date field to test auto item disabler. Updated xml file to fix css fields. Updated css file to fix fields. Added new js component to support date field expiration

--- a/view/frontend/templates/widget/view.phtml
+++ b/view/frontend/templates/widget/view.phtml
@@ -1,10 +1,8 @@
-<pre><?= json_encode($block->getSlides(),JSON_PRETTY_PRINT); ?></pre>
+<pre><?= json_encode($block->getRawData(),JSON_PRETTY_PRINT); ?></pre>
 <?php
  $slides = $block->getSlidesData();
  if(count($slides)):
 ?>
-
- <?= $block->getStylesheets(); ?>
 
  <div id="<?= $block->getId() ?>" class="usslick__slider" data-slick='<?= json_encode($block->getSlickSettings()) ?>'>
 
