--- a/view/adminhtml/web/css/styles.css
+++ b/view/adminhtml/web/css/styles.css
@@ -20,26 +20,4 @@
 .us-admin__fieldset-modal-child > .fieldset-wrapper-title { padding: 0 1.5rem !important; }
 .us-admin__fieldset-modal-neph { margin-bottom: 5px; border: 1px solid #ccc; }
 .us-admin__fieldset-modal-neph > .fieldset-wrapper-title { background: #f5f5f5; padding: 1rem !important; }
-
-.us_admin__fieldset-onion { width: 660px; margin: 0 auto !important; background: #f5f5f5 !important; }
-.us_admin__fieldset-onion .fieldset-wrapper-title { padding-bottom: 0 !important; }
-.us_admin__fieldset-onion > .admin__fieldset-wrapper-content,
-.us_admin__fieldset-onion > .admin__fieldset-wrapper-content > .admin__fieldset { position: relative; }
-.us_admin__fieldset-onion > .admin__fieldset-wrapper-content > .admin__fieldset { height: 200px; padding: 1rem; }
-.us_admin__fieldset-onion > .admin__fieldset-wrapper-content > .admin__fieldset > .admin__field { position: absolute; margin: 0; z-index: 1; }
-.us_admin__fieldset-onion > .admin__fieldset-wrapper-content > .admin__fieldset > .admin__field[data-index="top"] { top: -2rem; left: 50%; transform: translateX(-50%); }
-.us_admin__fieldset-onion > .admin__fieldset-wrapper-content > .admin__fieldset > .admin__field[data-index="right"] { top: 43%; right: 1rem; transform: translateY(-50%); }
-.us_admin__fieldset-onion > .admin__fieldset-wrapper-content > .admin__fieldset > .admin__field[data-index="bottom"] { bottom: 1rem; left: 50%; transform: translateX(-50%); }
-.us_admin__fieldset-onion > .admin__fieldset-wrapper-content > .admin__fieldset > .admin__field[data-index="left"] { top: 43%; left: 1rem; transform: translateY(-50%); }
-.us_admin__fieldset-onion > .admin__fieldset-wrapper-content > .admin__fieldset > .admin__field > .admin__field-label { display: none; }
-.us_admin__fieldset-onion > .admin__fieldset-wrapper-content > .admin__fieldset > .admin__field > .admin__field-control { width: auto; float: none; flex-wrap: wrap; margin: 0 !important; }
-.us_admin__fieldset-onion > .admin__fieldset-wrapper-content > .admin__fieldset > .admin__field > .admin__field-control > .admin__field { margin-right: 0 !important; margin-bottom: 2px; }
-.us_admin__fieldset-onion > .admin__fieldset-wrapper-content > .admin__fieldset > .admin__field > .admin__field-control > .admin__field.us-admin__groupfield--length { width: 60px; }
-.us_admin__fieldset-onion > .admin__fieldset-wrapper-content > .admin__fieldset > .admin__field > .admin__field-control > .admin__field.us-admin__groupfield--unit { width: auto !important; margin-left: 2px; }
-.us_admin__fieldset-onion > .admin__fieldset-wrapper-content > .admin__fieldset > .admin__field > .admin__field-control > .admin__field > .admin__field-label { display: none; }
-.us_admin__fieldset-onion > .admin__fieldset-wrapper-content > .admin__fieldset > .admin__field > .admin__field-control > .admin__field.us-admin__groupfield--unit > .admin__field-control .admin__control-select { min-width: 38px !important; }
-.us_admin__fieldset-onion-sub { width: 350px; position: absolute !important; left: 50%; top: 34%; transform: translate(-50%, -37%); background: #ebebeb !important; }
-.us_admin__fieldset-onion-sub  .fieldset-wrapper-title { background: #ebebeb !important; }
-.us_admin__fieldset-onion-sub > .admin__fieldset-wrapper-content > .admin__fieldset { height: 90px; }
-.us_admin__fieldset-onion-sub > .admin__fieldset-wrapper-content > .admin__fieldset > .admin__field[data-index="right"],
-.us_admin__fieldset-onion-sub > .admin__fieldset-wrapper-content > .admin__fieldset > .admin__field[data-index="left"] { top: 30%; transform: translateY(-30%); }
+.us-admin__fieldset-modal-neph .us-admin__fieldset-neph { margin-right: 15px; margin-left: 15px; }
