Fixed front-end container

--- a/view/frontend/templates/widget/view.phtml
+++ b/view/frontend/templates/widget/view.phtml
@@ -24,20 +24,24 @@
   <?php if($enabled && $image): ?>
 
   <div class="usslick__slide<?= $index ?> usslick__slide">
+
+   <div class="usslick__slide--inner">
    
-   <?php if($getLink) : ?>
-   <a href="<?= $getLink ?>" title="<?= $title ?>" class="usslick__slide--link" <?= $getTarget ?>>
-   <?php else: ?>
-   <div class="usslick__slide--unlink">
-   <?php endif; ?>
+    <?php if($getLink) : ?>
+    <a href="<?= $getLink ?>" title="<?= $title ?>" class="usslick__slide--link" <?= $getTarget ?>>
+    <?php else: ?>
+    <div class="usslick__slide--unlink">
+    <?php endif; ?>
 
-    <img src="<?= $getImage ?>" alt="<?= $alt ?>" title="<?= $title ?>" class="usslick__slide--image" />
+     <img src="<?= $getImage ?>" alt="<?= $alt ?>" title="<?= $title ?>" class="usslick__slide--image" />
 
-   <?php if($getLink) : ?>
-   </a>
-   <?php else: ?>
+    <?php if($getLink) : ?>
+    </a>
+    <?php else: ?>
+    </div>
+    <?php endif; ?>
+
    </div>
-   <?php endif; ?>
 
   </div>
   <?php endif; ?>
