Changes on the css file. Updated Functionality to set default width and height

--- a/view/frontend/web/css/styles.css
+++ b/view/frontend/web/css/styles.css
@@ -1,7 +1,9 @@
 .usslick__slider * { box-sizing: border-box; }
-.usslick__slider
+
+/* Fallback */
 .usslick__slide--link,
 .usslick__slide--image { display: block; }
+.usslick__slide--inner,
 .usslick__slide--link,
 .usslick__slide--unlink { height: 100%; }
 .usslick__slider .slick-slide { height: auto; }
