--- a/view/frontend/web/css/styles.css
+++ b/view/frontend/web/css/styles.css
@@ -8,3 +8,4 @@
 .usslick__slide--link,
 .usslick__slide--unlink { height: 100%; }
 .usslick__slider .slick-slide { height: auto; }
+.usslick__slide--inner { overflow: hidden; }
