--- a/view/adminhtml/web/template/form/element/uploader/image.html
+++ b/view/adminhtml/web/template/form/element/uploader/image.html
@@ -12,7 +12,7 @@
   <div class="file-uploader image-uploader" data-role="drop-zone" css="_loading: isLoading">
    <div class="file-uploader-area">
     <input type="file" afterRender="onElementRender" attr="id: uid, name: inputName, multiple: isMultipleFiles" disable="disabled" />
-    <label data-bind="event: {change: addFileFromMediaGallery, click: openMediaBrowserDialog}" class="file-uploader-button action-default" attr="id: mediaGalleryUid, disabled: disabled" data-force_static_path="1" translate="'Select or Upload Image'"></label>
+    <label data-bind="event: {change: addFileFromMediaGallery, click: openMediaBrowserDialog}" class="file-uploader-button action-default" attr="id: mediaGalleryUid, disabled: disabled" data-force_static_path="1" translate="'Upload Image'"></label>
     <render args="fallbackResetTpl" if="$data.showFallbackReset && $data.isDifferedFromDefault"></render>
     <p class="image-upload-requirements">
      <span if="$data.maxFileSize">
